tdf#116157: Always apply Unicode Bidi in editeng

Similar to commit 270d6db63d933b7350dc8543b9b9ebc2133a116e which fixed
the same issue in Writer. Surely having two text engines duplicating the
same bugs sounded like a brilliant idea to someone.

Change-Id: If85315fb00a2c0be78d502df0bfb9b50d9191368